RESOLVED FIXED40534
REGRESSION (Safari 4-TOT): Crash when a frame’s resize handler removes the frame
https://bugs.webkit.org/show_bug.cgi?id=40534
Summary REGRESSION (Safari 4-TOT): Crash when a frame’s resize handler removes the frame
mitz
Reported 2010-06-12 16:22:58 PDT
<rdar://problem/8025267> Patch forthcoming.
Attachments
Null-check m_widget (3.46 KB, patch)
2010-06-12 16:26 PDT, mitz
oliver: review+
mitz
Comment 1 2010-06-12 16:26:04 PDT
Created attachment 58568 [details] Null-check m_widget
Oliver Hunt
Comment 2 2010-06-12 16:32:47 PDT
Comment on attachment 58568 [details] Null-check m_widget r=me, fix the garbage character in the changelog
mitz
Comment 3 2010-06-12 16:34:32 PDT
(In reply to comment #2) > (From update of attachment 58568 [details]) > r=me, fix the garbage character in the changelog Thanks. There’s not garbage character in the change log. It’s a bug in the prettifier (or its Bugzilla interface).
mitz
Comment 4 2010-06-12 16:36:30 PDT
Maciej Stachowiak
Comment 5 2010-06-12 16:55:08 PDT
> + <rdar://problem/8025267> REGRESSION (Safari 4-TOT): Crash when a frameâs resize handler removes the frame I suggest removing the non-ASCII character from the ChangeLog.
mitz
Comment 6 2010-06-12 17:15:57 PDT
(In reply to comment #5) > > + <rdar://problem/8025267> REGRESSION (Safari 4-TOT): Crash when a frameâs resize handler removes the frame > > I suggest removing the non-ASCII character from the ChangeLog. There are lots of non-ASCII characters in the ChangeLog files, as some contributors’ names contain non-ASCII characters. I suggest fixing tools that don’t display UTF-8 correctly :-)
Note You need to log in before you can comment on or make changes to this bug.