<rdar://problem/8025267> REGRESSION (Safari 4-TOT): Crash when a frame’s resize handler removes the frame https://bugs.webkit.org/show_bug.cgi?id=40534

Reviewed by Oliver Hunt.

WebCore:

Test: fast/replaced/frame-removed-during-resize.html

* rendering/RenderWidget.cpp:
(WebCore::RenderWidget::updateWidgetPosition): Null-check m_widget, since resizing the widget
may trigger an iframe’s resize handler, which may destroy the widget.

LayoutTests:

* fast/replaced/frame-removed-during-resize-expected.txt: Added.
* fast/replaced/frame-removed-during-resize.html: Added.



Canonical link: https://commits.webkit.org/52083@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61070 268f45cc-cd09-0410-ab3c-d52691b4dbfc